# src/infrastructure/api/validation/login-schema.ts
@@ -1,0 +1,6 @@
+import Joi from "joi";
+
+export const loginSchema = Joi.object({
+  email: Joi.string().trim().email().required(),
+  password: Joi.string().min(8).max(128).required()
+});
